fix(core): `Hint` fix flicker in iOS

--- a/projects/core/directives/hint/hint.style.less
+++ b/projects/core/directives/hint/hint.style.less
@@ -63,8 +63,7 @@
     &[data-appearance='dark'] {
         background: var(--tui-background-elevation-1);
         color: var(--tui-text-primary);
-        filter: drop-shadow(0 0 0.125rem rgba(0, 0, 0, 0.16)) drop-shadow(0 1.5rem 1rem rgba(0, 0, 0, 0.03))
-            drop-shadow(0 0.75rem 0.75rem rgba(0, 0, 0, 0.04)) drop-shadow(0 0.25rem 0.375rem rgba(0, 0, 0, 0.05));
+        box-shadow: var(--tui-shadow-small);
     }
 
     &:not([style*='top']) {
